# antibot-developer-trainee

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: internal-check.yml
antibot/: asgi.py  middleware.py  ratelimit.py  settings.py  test.py  urls.py  wsgi.py
nginx/: nginx.conf
